Configure styleguidist and styled-components

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "plugins": ["react"],
-  "extends": ["airbnb"],
+  "extends": [
+    "airbnb",
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "parser": "babel-eslint",
   "env": {
     "browser": true,
